# LearningDirectX12

./: CMakeLists.txt  GenerateProjectFiles.bat
D3DX12AffinityLayer/: CMakeLists.txt
D3DX12AffinityLayer/inc/: Utils.h
D3DX12AffinityLayer/src/: CD3DX12AffinityCommandQueue.cpp  CD3DX12AffinityDevice.cpp  CD3DX12AffinityObject.cpp  Utils.cpp
DX12Lib/: CMakeLists.txt
DX12Lib/inc/: Buffer.h  ByteAddressBuffer.h  CommandList.h  CommandQueue.h  ConstantBuffer.h  DX12LibPCH.h  DescriptorAllocation.h  DescriptorAllocator.h  DescriptorAllocatorPage.h  Device.h  DynamicDescriptorHeap.h  GUI.h  GenerateMipsPSO.h  Helpers.h  IndexBuffer.h  PanoToCubemapPSO.h  RenderTarget.h  Resource.h  ResourceStateTracker.h  RootSignature.h  Scene.h  StructuredBuffer.h  SwapChain.h  Texture.h  TextureUsage.h  UploadBuffer.h  VertexBuffer.h
DX12Lib/src/: Buffer.cpp  ByteAddressBuffer.cpp  CommandList.cpp  CommandQueue.cpp  ConstantBuffer.cpp  DescriptorAllocation.cpp  DescriptorAllocator.cpp  DescriptorAllocatorPage.cpp  Device.cpp  DynamicDescriptorHeap.cpp  GUI.cpp  GenerateMipsPSO.cpp  IndexBuffer.cpp  Mesh.cpp  PanoToCubemapPSO.cpp  Resource.cpp  ResourceStateTracker.cpp  RootSignature.cpp  StructuredBuffer.cpp  SwapChain.cpp  Texture.cpp  UploadBuffer.cpp  VertexBuffer.cpp
Events/: CMakeLists.txt
Events/inc/: Connection.h  ConnectionBody.h  Events.h  GarbageCollectingLock.h  NonCopyable.h
GameFramework/: CMakeLists.txt  resource.h
GameFramework/inc/: Application.h  Game.h  GameFrameworkPCH.h  Window.h
GameFramework/src/: Application.cpp  Game.cpp  HighResolutionClock.cpp  Window.cpp
Platform/: CMakeLists.txt
Platform/inc/: IWindow.h
Platform/src/: PlatformPCH.cpp
Renderer/: CMakeLists.txt
Renderer/inc/: IRenderer.h
Samples/05-afr/: CMakeLists.txt  resource.h
Samples/05-afr/inc/: Helpers.h
Samples/05-afr/src/: Tutorial5.cpp  main.cpp
Tutorial1/: CMakeLists.txt
Tutorial1/src/: main.cpp
Tutorial2/inc/: Game.h  Tutorial2.h
Tutorial2/src/: Tutorial2.cpp
Tutorial3/: CMakeLists.txt
Tutorial3/inc/: Tutorial3.h
Tutorial3/src/: Tutorial3.cpp  main.cpp
Tutorial4/: CMakeLists.txt
Tutorial5/: CMakeLists.txt
Tutorial5/inc/: Camera.h  Tutorial5.h
Tutorial5/src/: Tutorial5.cpp  main.cpp
